tests/sources/invalid/match/match_non_exhaustive.fire
// Invalid: match does not cover every enum variant and has no wildcard.
// EXPECT: semantic error

enum Shape {
    Circle(float64 radius),
    Rectangle(float64 width, float64 height),
    Point
}

Shape s = Shape.Circle(3.0);
match s {  //~ ERROR FS-SEM-0001 @1
    Shape.Circle(radius) -> { }
}
